--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
+    "@angular/fire": "^6.0.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^9.1.0",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@firebase/app": "^0.6.8",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -50,6 +52,7 @@
     "@ngx-translate/core": "^12.0.0",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "firebase": "^7.16.1",
     "material-design-icons-iconfont": "^5.0.1",
     "ng-validate-equal": "^1.0.4",
     "path": "^0.12.7",
@@ -59,10 +62,10 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
-    "@angular-devkit/build-angular": "^0.901.0",
     "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@ngx-rocket/scripts": "^4.0.0",
@@ -73,6 +76,7 @@
     "hads": "^2.0.1",
     "htmlhint": "^0.11.0",
     "https-proxy-agent": "^5.0.0",
+    "husky": "^4.2.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
     "karma": "~4.4.1",
@@ -82,17 +86,16 @@
     "karma-jasmine-html-reporter": "^1.5.3",
     "karma-junit-reporter": "^2.0.1",
     "prettier": "^2.0.2",
-    "tslint-config-prettier": "^1.14.0",
-    "stylelint-config-prettier": "^8.0.1",
     "pretty-quick": "^2.0.1",
-    "husky": "^4.2.3",
     "protractor": "~5.4.3",
     "stylelint": "~13.2.1",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "~4.2.0",
     "stylelint-config-standard": "~20.0.0",
     "stylelint-scss": "~3.16.0",
     "ts-node": "^8.8.1",
     "tslint": "~5.20.1",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "~3.8.3",
     "webpack-bundle-analyzer": "3.4.1"
   },
