--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
+  },
   "dependencies": {
     "app-module-path": "^2.2.0",
     "bcrypt": "^5.0.0",
