--- a/package.json
+++ b/package.json
@@ -44,15 +44,19 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "@firebase/app": "^0.6.8",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ngx-translate/core": "^12.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "firebase": "^7.16.1",
+    "jsonwebtoken": "^8.5.1",
     "material-design-icons-iconfont": "^5.0.1",
     "ng-validate-equal": "^1.0.4",
     "path": "^0.12.7",
