--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/apple-touch-icon.png", "src/robots.txt", "src/assets"],
-            "styles": ["src/main.scss", "node_modules/bootstrap/dist/css/bootstrap.min.css"],
+            "styles": [
+              "src/main.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/material-design-icons-iconfont/dist/material-design-icons.css"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/styles", "src/theme"]
             },
